@@ -42,71 +42,28 @@ import com.cisco.cx.training.models.SuccessTalk;
 import com.cisco.cx.training.models.SuccessTalkResponseSchema;
 import com.cisco.cx.training.models.SuccessTalkSession;
 import com.cisco.cx.training.models.UserDetailsWithCompanyList;
+import com.cisco.cx.training.util.LearningContentUtil;
 
+@SuppressWarnings({"squid:S2221","squid:S5361","squid:S134","squid:S1200","squid:S00104"})
 @Service
 public class LearningContentServiceImpl implements LearningContentService {
 
 	private final Logger LOG = LoggerFactory.getLogger(this.getClass().getName());
 
-	public static final HashMap<String, String> filterNameMappings=getMappings();
+	static final HashMap<String, String> filterNameMappings= LearningContentUtil.getMappings();
 
-	public static final List<String> defaultFilterOrder= getDefaultFilterOrder();
+	static final List<String> defaultFilterOrder= LearningContentUtil.getDefaultFilterOrder();
 
-	public static final List<String> cxInsightsFilterOrder= getCXInsightsFilterOrder();
+	static final List<String> cxInsightsFilterOrder= LearningContentUtil.getCXInsightsFilterOrder();
 
-	public static final List<String> lfcFilterOrder= getLFCFilterOrder();
-
-	private static HashMap<String, String> getMappings() {
-		HashMap<String, String> filterGroupMappings=new HashMap<String, String>();
-		filterGroupMappings.put(Constants.LANGUAGE, Constants.LANGUAGE_PRM);
-		filterGroupMappings.put(Constants.LIVE_EVENTS, Constants.REGION);
-		filterGroupMappings.put(Constants.CONTENT_TYPE, Constants.CONTENT_TYPE_PRM);
-		filterGroupMappings.put(Constants.ROLE, Constants.ROLE);
-		filterGroupMappings.put(Constants.MODEL, Constants.MODEL);
-		filterGroupMappings.put(Constants.TECHNOLOGY, Constants.TECHNOLOGY);
-		filterGroupMappings.put(Constants.SUCCESS_TRACK, Constants.SUCCESS_TRACK);
-		filterGroupMappings.put(Constants.LIFECYCLE, Constants.LIFECYCLE);
-		filterGroupMappings.put(Constants.FOR_YOU_FILTER, Constants.FOR_YOU_FILTER);
-		return filterGroupMappings;
-	}
-
-	private static List<String> getDefaultFilterOrder() {
-		List<String> order = new ArrayList<>();
-		order.add(Constants.ROLE);
-		order.add(Constants.SUCCESS_TRACK);
-		order.add(Constants.LIFECYCLE);
-		order.add(Constants.TECHNOLOGY);
-		order.add(Constants.LIVE_EVENTS);
-		order.add(Constants.CONTENT_TYPE);
-		order.add(Constants.LANGUAGE);
-		return order;
-	}
-
-	private static List<String> getCXInsightsFilterOrder() {
-		List<String> order = new ArrayList<>();
-		order.add(Constants.LIFECYCLE);
-		order.add(Constants.ROLE);
-		order.add(Constants.TECHNOLOGY);
-		order.add(Constants.SUCCESS_TRACK);
-		order.add(Constants.LIVE_EVENTS);
-		order.add(Constants.FOR_YOU_FILTER);
-		order.add(Constants.CONTENT_TYPE);
-		order.add(Constants.LANGUAGE);
-		return order;
-	}
-
-	private static List<String> getLFCFilterOrder() {
-		List<String> order = new ArrayList<>();
-		order.add("Accelerate"); order.add("Need");
-		order.add("Evaluate"); order.add("Select");
-		order.add("Align"); order.add("Purchase");
-		order.add("Onboard"); order.add("Implement");
-		order.add("Use");  order.add("Engage");
-		order.add("Adopt"); order.add("Optmize");
-		order.add("Renew"); order.add("Recommend");
-		order.add("Advocate");
-		return order;
-	}
+	static final List<String> lfcFilterOrder= LearningContentUtil.getLFCFilterOrder();
+	
+	private static final String DEMO_NA_MSG = "Not Allowed for DemoAccount";
+	private static final String TECHNOLOGY_LABEL = "Technology";
+	private static final String ST_LABEL = "Success Tracks";
+	private static final String ROLE_LABEL = "Role";
+	private static final String DOC_LABEL = "Documentation";
+	private static final String WEBINARS_LABEL = "Webinars";
 
 	@Autowired
 	private NewLearningContentDAO learningContentDAO;
@@ -277,8 +234,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 	private CountSchema getWebinarCount() {
 
 		CountSchema webinarCount = new CountSchema();
-		webinarCount.setLabel("Webinars");
-		webinarCount.setCount(new Long(learningContentDAO.getPIWCount()+learningContentDAO.getSuccessTalkCount()));
+		webinarCount.setLabel(WEBINARS_LABEL);
+		webinarCount.setCount(Long.valueOf(Integer.toUnsignedLong(learningContentDAO.getPIWCount())+learningContentDAO.getSuccessTalkCount()));
 		return webinarCount;
 
 	}
@@ -286,8 +243,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 	private CountSchema getDocumentationCount() {
 
 		CountSchema documentationCount = new CountSchema();
-		documentationCount.setLabel("Documentation");
-		documentationCount.setCount(new Long(learningContentDAO.getDocumentationCount()));
+		documentationCount.setLabel(DOC_LABEL);
+		documentationCount.setCount(Long.valueOf(learningContentDAO.getDocumentationCount()));
 		return documentationCount;
 
 	}
@@ -295,8 +252,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 	private CountSchema getSuccessTrackCount() {
 
 		CountSchema documentationCount = new CountSchema();
-		documentationCount.setLabel("Success Tracks");
-		documentationCount.setCount(new Long(learningContentDAO.getSuccessTracksCount()+learningContentDAO.getLifecycleCount()));
+		documentationCount.setLabel(ST_LABEL);
+		documentationCount.setCount(Long.valueOf(Integer.toUnsignedLong(learningContentDAO.getSuccessTracksCount())+learningContentDAO.getLifecycleCount()));
 		return documentationCount;
 
 	}
@@ -304,8 +261,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 	private CountSchema getTechnologyCount() {
 
 		CountSchema documentationCount = new CountSchema();
-		documentationCount.setLabel("Technology");
-		documentationCount.setCount(new Long(learningContentDAO.getTechnologyCount()));
+		documentationCount.setLabel(TECHNOLOGY_LABEL);
+		documentationCount.setCount(Long.valueOf(learningContentDAO.getTechnologyCount()));
 		return documentationCount;
 
 	}
@@ -313,8 +270,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 	private CountSchema getRolesCount() {
 
 		CountSchema documentationCount = new CountSchema();
-		documentationCount.setLabel("Role");
-		documentationCount.setCount(new Long(learningContentDAO.getRolesCount()));
+		documentationCount.setLabel(ROLE_LABEL);
+		documentationCount.setCount(Long.valueOf(learningContentDAO.getRolesCount()));
 		return documentationCount;
 
 	}
@@ -396,7 +353,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching new filter counts", e);
 			throw new GenericException("There was a problem in fetching new filter counts");
 		}
-		result=orderFilters(viewMoreNewCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result=orderFilters(viewMoreNewCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 
@@ -410,8 +367,8 @@ public class LearningContentServiceImpl implements LearningContentService {
 			Optional<Company> matchingObject = companies.stream()
 					.filter(c -> (c.getPuid().equals(puid) && c.isDemoAccount())).findFirst();
 			Company company = matchingObject.isPresent() ? matchingObject.get() : null;
-			if (company != null)
-				throw new NotAllowedException("Not Allowed for DemoAccount");
+			if (company != null) {
+				throw new NotAllowedException(DEMO_NA_MSG);}
 		}
 		try {
 			productDocumentationService.addLearningsViewedForRole(userId,learningStatusSchema.getLearningItemId(),puid);
@@ -515,7 +472,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching recently viewed filter counts", e);
 			throw new GenericException("There was a problem in fetching recently viewed filter counts");
 		}
-		result=orderFilters(recentlyViewedCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result=orderFilters(recentlyViewedCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 
@@ -582,7 +539,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching bookmarked filter counts", e);
 			throw new GenericException("There was a problem in fetching bookmarked filter counts");
 		}
-		result=orderFilters(bookmarkedCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result=orderFilters(bookmarkedCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 	
@@ -646,7 +603,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching upcoming filter counts", e);
 			throw new GenericException("There was a problem in fetching upcoming filter counts");
 		}
-		result=orderFilters(upcomingContentCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result=orderFilters(upcomingContentCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 
@@ -668,10 +625,10 @@ public class LearningContentServiceImpl implements LearningContentService {
 		}
 		try
 		{
-			if(popularityType.equals(Constants.POPULAR_ACROSS_PARTNERS_PATH))
-				contentList = learningContentDAO.fetchPopularAcrossPartnersContent(queryMap, stMap);
-			if(popularityType.equals(Constants.POPULAR_AT_PARTNER_PATH))
-				contentList = learningContentDAO.fetchPopularAtPartnerContent(queryMap, stMap, puid);
+			if(popularityType.equals(Constants.POPULAR_ACROSS_PARTNERS_PATH)) {
+				contentList = learningContentDAO.fetchPopularAcrossPartnersContent(queryMap, stMap);}
+			if(popularityType.equals(Constants.POPULAR_AT_PARTNER_PATH)) {
+				contentList = learningContentDAO.fetchPopularAtPartnerContent(queryMap, stMap, puid);}
 			// populate bookmark and registration info
 			Set<String> userBookmarks = null;
 			if (null != ccoid) {
@@ -708,15 +665,15 @@ public class LearningContentServiceImpl implements LearningContentService {
 		Map<String, Object> result;
 		try
 		{
-			if(popularityType.equals(Constants.POPULAR_ACROSS_PARTNERS_PATH))
-				popularContentCounts = learningContentDAO.getPopularAcrossPartnersFiltersWithCount(filtersSelected);
-			if(popularityType.equals(Constants.POPULAR_AT_PARTNER_PATH))
-				popularContentCounts = learningContentDAO.getPopularAtPartnerFiltersWithCount(filtersSelected, puid);
+			if(popularityType.equals(Constants.POPULAR_ACROSS_PARTNERS_PATH)) {
+				popularContentCounts = learningContentDAO.getPopularAcrossPartnersFiltersWithCount(filtersSelected);}
+			if(popularityType.equals(Constants.POPULAR_AT_PARTNER_PATH)) {
+				popularContentCounts = learningContentDAO.getPopularAtPartnerFiltersWithCount(filtersSelected, puid);}
 		}catch (Exception e) {
 			LOG.error("There was a problem in fetching popular across partners filter counts", e);
 			throw new GenericException("There was a problem in fetching popular across partners filter counts");
 		}
-		result=orderFilters(popularContentCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result=orderFilters(popularContentCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 
@@ -772,7 +729,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching cx insights filters", e);
 			throw new GenericException("There was a problem in fetching cx insights filters");
 		}
-		result=orderFilters(cxInsightsContentCounts, LearningContentServiceImpl.getCXInsightsFilterOrder());
+		result=orderFilters(cxInsightsContentCounts, LearningContentUtil.getCXInsightsFilterOrder());
 		return result;
 	}
 	
@@ -803,10 +760,10 @@ public class LearningContentServiceImpl implements LearningContentService {
 				{
 					LinkedHashMap<String, Object> lfcFilterNew=new LinkedHashMap<>();
 					Map<String, String> lfcOld = (Map<String, String>) filters.get(filterGroup);
-					List<String> lfcFilterOrder = LearningContentServiceImpl.getLFCFilterOrder();
-					for(String filter : lfcFilterOrder) {
-						if(lfcOld.containsKey(filter))
-							lfcFilterNew.put(filter, lfcOld.get(filter));
+					List<String> lfcFilterOrderList = LearningContentUtil.getLFCFilterOrder();
+					for(String filter : lfcFilterOrderList) {
+						if(lfcOld.containsKey(filter)) {
+							lfcFilterNew.put(filter, lfcOld.get(filter));}
 					}
 					filters.put(filterGroup, lfcFilterNew);
 				}
@@ -874,7 +831,7 @@ public class LearningContentServiceImpl implements LearningContentService {
 			LOG.error("There was a problem in fetching featured filter counts", e);
 			throw new GenericException("There was a problem in fetching featured filter counts");
 		}
-		result = orderFilters(featuredContentCounts, LearningContentServiceImpl.getDefaultFilterOrder());
+		result = orderFilters(featuredContentCounts, LearningContentUtil.getDefaultFilterOrder());
 		return result;
 	}
 
